; ModuleID = '/home/carl/AnghaBench/libgit2/tests/reset/extr_default.c_test_reset_default__resetting_unknown_filepaths_does_not_fail.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/reset/extr_default.c_test_reset_default__resetting_unknown_filepaths_does_not_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8**, i32 }

@.str = private unnamed_addr constant [19 x i8] c"I_am_not_there.txt\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"me_neither.txt\00", align 1
@__const.test_reset_default__resetting_unknown_filepaths_does_not_fail.paths = private unnamed_addr constant [2 x i8*] [i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i32 0, i32 0)], align 16
@.str.2 = private unnamed_addr constant [7 x i8] c"status\00", align 1
@_pathspecs = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@_target = common dso_local global i32 0, align 4
@_repo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_reset_default__resetting_unknown_filepaths_does_not_fail() #0 {
  %1 = alloca [2 x i8*], align 16
  %2 = bitcast [2 x i8*]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %2, i8* align 16 bitcast ([2 x i8*]* @__const.test_reset_default__resetting_unknown_filepaths_does_not_fail.paths to i8*), i64 16, i1 false)
  %3 = call i32 @initialize(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %4 = getelementptr inbounds [2 x i8*], [2 x i8*]* %1, i64 0, i64 0
  store i8** %4, i8*** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_pathspecs, i32 0, i32 0), align 8
  store i32 2, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_pathspecs, i32 0, i32 1), align 8
  %5 = call i32 @assert_content_in_index(%struct.TYPE_4__* @_pathspecs, i32 0, i32* null)
  %6 = load i32, i32* @_repo, align 4
  %7 = call i32 @git_revparse_single(i32* @_target, i32 %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @_repo, align 4
  %10 = load i32, i32* @_target, align 4
  %11 = call i32 @git_reset_default(i32 %9, i32 %10, %struct.TYPE_4__* @_pathspecs)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @assert_content_in_index(%struct.TYPE_4__* @_pathspecs, i32 0, i32* null)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @initialize(i8*) #2

declare dso_local i32 @assert_content_in_index(%struct.TYPE_4__*, i32, i32*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_revparse_single(i32*, i32, i8*) #2

declare dso_local i32 @git_reset_default(i32, i32, %struct.TYPE_4__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
